refactor: support read only transactions in mysql and postgres

--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "schedule": [
       "every weekday"
     ],
-    "ignoreDeps": [g
+    "ignoreDeps": [
       "mysql",
       "@docusaurus/*",
       "ts-jest",
