--- a/packages/mariadb/package.json
+++ b/packages/mariadb/package.json
@@ -61,9 +61,11 @@
     "@mikro-orm/knex": "6.4.13"
   },
   "devDependencies": {
-    "@mikro-orm/core": "^6.4.13"
+    "@mikro-orm/core": "^6.4.13",
+    "kysely": "https://pkg.pr.new/kysely-org/kysely/kysely@2b7007e"
   },
   "peerDependencies": {
-    "@mikro-orm/core": "^6.0.0"
+    "@mikro-orm/core": "^6.0.0",
+    "kysely": "*"
   }
 }
