--- a/packages/mysql/package.json
+++ b/packages/mysql/package.json
@@ -62,9 +62,11 @@
     "mysql2": "3.14.0"
   },
   "devDependencies": {
-    "@mikro-orm/core": "^6.4.13"
+    "@mikro-orm/core": "^6.4.13",
+    "kysely": "https://pkg.pr.new/kysely-org/kysely/kysely@2b7007e"
   },
   "peerDependencies": {
-    "@mikro-orm/core": "^6.0.0"
+    "@mikro-orm/core": "^6.0.0",
+    "kysely": "*"
   }
 }
