--- a/packages/knex/package.json
+++ b/packages/knex/package.json
@@ -50,7 +50,7 @@
     "access": "public"
   },
   "dependencies": {
-    "kysely": "https://pkg.pr.new/kysely-org/kysely/kysely@2b7007e",
+    "kysely": "0.28.0",
     "sqlstring": "2.3.3"
   },
   "devDependencies": {
