--- a/packages/mariadb/package.json
+++ b/packages/mariadb/package.json
@@ -50,7 +50,7 @@
     "access": "public"
   },
   "dependencies": {
-    "@mikro-orm/knex": "6.4.13"
+    "@mikro-orm/mysql": "6.4.13"
   },
   "devDependencies": {
     "@mikro-orm/core": "^6.4.13",
